Add .idea/ to 2022 .gitignore
Using IntelliJ IDEA now for catching mistakes earlier than compile time
now, instead of straight up vim without proper rust tooling.

--- a/2022/.gitignore
+++ b/2022/.gitignore
@@ -17,3 +17,6 @@ Cargo.lock
 
 # For ease of use I'm sticking the input in each challenge's folder as `input.txt`
 input.txt
+
+# Started using IntelliJ IDEA with rust plugin instead of straight up vim
+.idea/
